[tool.poetry]
name = "reflexion-agent"
version = "0.1.0"
description = ""
authors = ["Rosie Faulkner <faulknerproject@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "*"
black = "*"
isort = "*"
langchain = "*"
langchain-openai = "*"
grandalf = "*"
langchain-community = "*"
langgraph = "*"
langchain-core = "^1.1.0"
langchain-google-genai = "^3.2.0"
tavily = "^1.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
